--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Apoya nuestro proyecto con donaciones en criptomonedas</h1>
+        <h1>Si te gusto y te funciona puedes apoyarno para crear mas app por bien de la comunidad</h1>
         <p>Escanea el código QR o copia la dirección de tu criptomoneda preferida para donar.</p>
         
         <div class="donation-address">
