--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Si te gusto y te funciona puedes apoyarno para crear mas app por bien de la comunidad</h1>
+        <h1>Si te encanto la el autofarm puedes apoyarno para crear mas app por bien de la comunidad</h1>
         <p>Escanea el código QR o copia la dirección de tu criptomoneda preferida para donar.</p>
         
         <div class="donation-address">
-            <h2>Bitcoin (BTC)</h2>
+            <h2>(BTC)</h2>
             <img src="https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=tu_direccion_btc" alt="QR Code Bitcoin">
             <p>Dirección: <code>tu_direccion_btc</code></p>
         </div>
