--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 <body>
     <div class="container">
         <h1>Si te encanto la el autofarm puedes apoyarno para crear mas app por bien de la comunidad</h1>
-        <p>Escanea el código QR o copia la dirección de tu criptomoneda preferida para donar.</p>
         
         <div class="donation-address">
-            <h2>(BTC)</h2>
-            <img src="https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=tu_direccion_btc" alt="QR Code Bitcoin">
+            <h2>USDT</h2>
+            <h2>RED (USDT-ERC20)</h2>
+            <img src="https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578" alt="QR Code USDT">
             <p>Dirección: <code>tu_direccion_btc</code></p>
         </div>
         
