--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2>USDT</h2>
             <h2>RED (USDT-ERC20)</h2>
             <img src="https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578" alt="QR Code USDT">
-            <p>Dirección: <code>tu_direccion_btc</code></p>
+            <p>Dirección: <code>0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578</code></p>
         </div>
         
         <!-- Puedes agregar más criptomonedas aquí -->
