--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="donation-address">
             <h2>USDT</h2>
             <h3>RED (USDT-ERC20)</h3>
-            <img src="qr.png" alt="QR Code USDT">
+            <img src="https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=usdt:0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578" alt="QR Code USDT">
             <p>Dirección: <code>0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578</code></p>
         </div>
         
