--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <h1>Apoya nuestro proyecto con donaciones en criptomonedas</h1>
-        <p>Tu apoyo es fundamental para que podamos continuar con nuestro proyecto. Las donaciones en criptomonedas nos permiten mantener nuestra independencia y seguir ofreciendo contenido de calidad. ¡Gracias por tu generosidad!</p>
+        <p>Tu apoyo es fundamental para tomar el tiempo en crear ejecutable automatico y seguir ofreciendo contenido de calidad. ¡Gracias por tu generosidad!</p>
         <p>Escanea el código QR o copia la dirección de tu criptomoneda preferida para donar.</p>
         
         <div class="donation-address">
