--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <script>
         var qrcode = new QRCode(document.getElementById("qrcode"), {
-            text: "ethereum:0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578",
+            text: "0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578",
             width: 200,
             height: 200
         });
