--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         
         <div class="donation-address">
             <h2>USDT (Tether)</h2>
+            <h3>RED (USDT-ERC20)</h3>
             <div id="qrcode"></div>
             <p>Dirección: <code>0xbf71dcb2cf9a33e6a1fa96058bde68fb9acea578</code></p>
         </div>
