--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
         <h1>Apoya nuestro proyecto con donaciones en criptomonedas</h1>
         <p>Tu apoyo es fundamental para tomar el tiempo en crear ejecutable automatico y seguir ofreciendo contenido de calidad. ¡Gracias por tu generosidad!</p>
-        <p>Escanea el código QR o copia la dirección de tu criptomoneda preferida para donar.</p>
+        <p>Escanea el código QR o copia la dirección para donar USDT.</p>
         
         <div class="donation-address">
             <h2>USDT (Tether)</h2>
